--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "i": "^0.3.7",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3"
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
